添加Money页面的样式

--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -7,3 +7,12 @@
     text-decoration: none;
     color: inherit;
   }
+  ul, ol{
+    list-style: none;
+  }
+  button, input{
+    font: inherit;
+  }
+  :focus{
+    outline: none;
+  }
