--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -2,3 +2,19 @@ $font-hei:-apple-system, "Noto Sans", "Helvetica Neue", Helvetica, "Nimbus Sans 
 $font-kai:Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
 $font-song: Georgia, "Nimbus Roman No9 L", "Songti SC", "Noto Serif CJK SC", "Source Han Serif SC", "Source Han Serif CN", STSong, "AR PL New Sung", "AR PL SungtiL GB", NSimSun, SimSun, "TW\-Sung", "WenQuanYi Bitmap Song", "AR PL UMing CN", "AR PL UMing HK", "AR PL UMing TW", "AR PL UMing TW MBE", PMingLiU, MingLiU, serif;
 $color-highlight:#f00;
+
+%clearFix {
+    &::after {
+      content: '';
+      clear: both;
+      display: block;
+    }
+  }
+  $color-shadow: rgba(0, 0, 0, 0.25);
+  %outerShadow {
+    box-shadow: 0 0 3px $color-shadow;
+  }
+  %innerShadow {
+    box-shadow: inset 0 -3px 3px -3px $color-shadow,
+    inset 0 3px 3px -3px $color-shadow;
+  }
